--- a/SALEH_CSAD_SKILLS.html
+++ b/SALEH_CSAD_SKILLS.html
@@ -38,6 +38,10 @@
 	opacity:60%;
 	}
 	
+	a:link{
+	color:white;
+	}
+	
 	
 </style>
 </head>
@@ -60,6 +64,6 @@
 
 	</p>
 
-	
+		<a href="index.html" title="Homepage"> Back to homepage</a>
 </body>
 </html>
