--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ padding-left:50px;
 a:link {
 	  color: red;
 	}
-
-	/* visited link */
+	
 	a:visited {
 	  color: green;
 	}
@@ -36,6 +35,7 @@ img{
 }
 div{
 background-color:#d7ebfe;
+border: 15px solid pink;
 
 }
 
