--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@ border: 15px solid pink;
 
 <div>
  <img src="gudetama.png" alt="Picture of me"> 
- 
+  <audio controls autoplay>
+  <source src="wii.mp3" type="audio/mp3">
+Your browser does not support the audio element.
+</audio> 
 <a href="saleh_biography_csad.html">About Me</a>
 <a href="SALEH_CSAD_SKILLS.html">Skills</a>
 <a href="resume.html">Resume</a>
