--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ background-color:#d7ebfe;
 border: 15px solid pink;
 
 }
+audio{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+	}
 
 </style>
 </head>
