--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@ audio{
   justify-content: center;
   align-items: center;
 	}
+p{
+	border-style: dashed;
+}
 
 </style>
+
 </head>
 	<!--CSAD-SALEH-MAHDEN-->
 <body>
@@ -56,9 +60,9 @@ audio{
   <source src="wii.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio> 
-<a href="saleh_biography_csad.html">About Me</a>
-<a href="SALEH_CSAD_SKILLS.html">Skills</a>
-<a href="resume.html">Resume</a>
+<p><a href="saleh_biography_csad.html">About Me</a> ||
+<a href="SALEH_CSAD_SKILLS.html">Skills</a> ||
+	<a href="resume.html">Resume</a></p>
 </div>
 </body>
 </html>
