--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ p{
 <div>
  <img src="gudetama.png" alt="Picture of me"> 
   
-<p><a href="saleh_biography_csad.html">About Me</a> ||
-<a href="SALEH_CSAD_SKILLS.html">Skills</a> ||
+<p><a href="saleh_biography_csad.html">About Me</a> 
+<a href="SALEH_CSAD_SKILLS.html">Skills</a> 
 	<a href="resume.html">Resume</a></p>
 </div>
 <audio controls autoplay>
