--- a/saleh_biography_csad.html
+++ b/saleh_biography_csad.html
@@ -6,7 +6,7 @@
 	<style>
  /* unvisited link */
 	a:link {
-	  color: red;
+	  color: white;
 	}
 
 	/* visited link */
@@ -17,6 +17,7 @@
 	/* mouse over link */
 	a:hover {
 	  color: hotpink;
+	 font-size:30px;
 	}
 
 	a:active {
