--- a/index.html
+++ b/index.html
@@ -2,70 +2,181 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>My Short Bio</title>
-<style>
-a:link, a:visited a:hover a:active{
-text-align: center; 
-padding-left:50px;
- display: block;
-}
-a:link {
-	  color: red;
+    <title>Homepage</title>
+	<style>
+	.header {
+	  overflow: hidden;
+	  background-color: #f1f1f1;
+	  padding: 20px 10px;
 	}
 	
-	a:visited {
-	  color: green;
+	.header a {
+	  float: left;
+	  color:#101010 ;
+	  text-align: center;
+	  padding: 12px;
+	  text-decoration: none;
+	  font-size: 18px;
+	  line-height: 25px;
+	  border-radius: 30px;
 	}
+	
+	.header a.logo {
+	 font-size: 25px;
+	 font-weight: bold;
+}
 
-	/* mouse over link */
-	a:hover {
-	  color: hotpink;
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+  line-height: 40px;
+}
+
+.header a.active {
+  background-color: black;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+
+.center{
+
+	text-align:center;
 	font-size:40px;
-	}
+	color: #283239;
 
-	a:active {
-	 color: blue;
-	} 
+}
+
 img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  border: 5px solid pink;
-  
-}
-div{
-background-color:#d7ebfe;
-border: 15px solid pink;
+
+	float:center;
+	width:500px;
+	height:360px;
+	
 
 }
-audio{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-	}
-p{
-	border-style: dashed;
-	border-color: white;
+
+div a#aboutme{
+		float: center;
+	  color:white ;
+	  text-align: center;
+	  padding: 20px 40px 20px 40px;
+	  text-decoration: none;
+	  font-size: 30px;
+	  line-height: 25px;
+	  border-radius: 5px;
+	  background-color:black;
 }
 
-</style>
+#aboutme a:hover{
+	padding: 20px 70px 20px 70px;
+	color:green;
 
+}
+
+
+body{
+
+  <!-- background-image: url('img_girl.jpg'); -->
+  <!-- background-repeat: no-repeat; -->
+  <!-- background-attachment: fixed; -->
+  <!-- background-size: cover; -->
+}
+	
+	</style>
 </head>
-	<!--CSAD-SALEH-MAHDEN-->
 <body>
+	 <div class="header">
+  <a href="#default" class="logo">Mahden Saleh</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="SALEH_CSAD_SKILLS.html">Skills</a>
+    <a href="aboutme.html">About</a>
+	<a href="gallery.html">Gallery</a>
 
-
-<div>
- <img src="gudetama.png" alt="Picture of me"> 
+  </div></div>
   
-<p><a href="saleh_biography_csad.html">About Me</a> 
-<a href="SALEH_CSAD_SKILLS.html">Skills</a> 
-	<a href="resume.html">Resume</a></p>
-</div>
-<audio controls autoplay>
-<source src="wii.mp3" type="audio/mp3">
-Your browser does not support the audio element.
-</audio> 
+
+	<div class="center">
+	<h1>Welcome to my page</h1>
+	<a id="aboutme" href="aboutme.html">Start</a>
+	</div>
+  
+  
+
 </body>
 </html>
+
+
+
+
+
+<!-- <style> -->
+<!-- a:link, a:visited a:hover a:active{ -->
+<!-- text-align: center;  -->
+<!-- padding-left:50px; -->
+ <!-- display: block; -->
+<!-- } -->
+<!-- a:link { -->
+	  <!-- color: red; -->
+	<!-- } -->
+	
+	<!-- a:visited { -->
+	  <!-- color: green; -->
+	<!-- } -->
+
+	<!-- /* mouse over link */ -->
+	<!-- a:hover { -->
+	  <!-- color: hotpink; -->
+	<!-- font-size:40px; -->
+	<!-- } -->
+
+	<!-- a:active { -->
+	 <!-- color: blue; -->
+	<!-- }  -->
+<!-- img{ -->
+  <!-- display: block; -->
+  <!-- margin-left: auto; -->
+  <!-- margin-right: auto; -->
+  <!-- width: 20%; -->
+  <!-- border: 5px solid pink; -->
+  
+<!-- } -->
+<!-- div{ -->
+<!-- background-color:#d7ebfe; -->
+<!-- border: 15px solid pink; -->
+
+<!-- } -->
+<!-- audio{ -->
+  <!-- display: flex; -->
+  <!-- justify-content: center; -->
+  <!-- align-items: center; -->
+	<!-- } -->
+<!-- p{ -->
+	<!-- border-style: dashed; -->
+	<!-- border-color: white; -->
+<!-- } -->
+
+<!-- </style> -->
+
+<!-- </head> -->
+	<!-- <!--CSAD-SALEH-MAHDEN--> 
+<!-- <body> -->
+
+
+<!-- <div> -->
+ <!-- <img src="gudetama.png" alt="Picture of me">  -->
+  
+<!-- <p><a href="saleh_biography_csad.html">About Me</a>  -->
+<!-- <a href="SALEH_CSAD_SKILLS.html">Skills</a>  -->
+	<!-- <a href="resume.html">Resume</a></p> -->
+<!-- </div> -->
+<!-- <audio controls autoplay> -->
+<!-- <source src="wii.mp3" type="audio/mp3"> -->
+<!-- Your browser does not support the audio element. -->
+<!-- </audio>  -->
+<!-- </body> -->
+<!-- </html> -->
