--- a/index.html
+++ b/index.html
@@ -1,182 +1,94 @@
-<!DOCTYPE html> 
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Homepage</title>
-	<style>
-	.header {
-	  overflow: hidden;
-	  background-color: #f1f1f1;
-	  padding: 20px 10px;
-	}
-	
-	.header a {
-	  float: left;
-	  color:#101010 ;
-	  text-align: center;
-	  padding: 12px;
-	  text-decoration: none;
-	  font-size: 18px;
-	  line-height: 25px;
-	  border-radius: 30px;
-	}
-	
-	.header a.logo {
-	 font-size: 25px;
-	 font-weight: bold;
-}
+<title>Homepage</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="index.css">
 
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-  line-height: 40px;
-}
-
-.header a.active {
-  background-color: black;
-  color: white;
-}
-
-.header-right {
-  float: right;
-}
-
-
-.center{
-
-	text-align:center;
-	font-size:40px;
-	color: #283239;
-
-}
-
-img{
-
-	float:center;
-	width:500px;
-	height:360px;
-	
-
-}
-
-div a#aboutme{
-		float: center;
-	  color:white ;
-	  text-align: center;
-	  padding: 20px 40px 20px 40px;
-	  text-decoration: none;
-	  font-size: 30px;
-	  line-height: 25px;
-	  border-radius: 5px;
-	  background-color:black;
-}
-
-#aboutme a:hover{
-	padding: 20px 70px 20px 70px;
-	color:green;
-
-}
-
-
-body{
-
-  <!-- background-image: url('img_girl.jpg'); -->
-  <!-- background-repeat: no-repeat; -->
-  <!-- background-attachment: fixed; -->
-  <!-- background-size: cover; -->
-}
-	
-	</style>
 </head>
-<body>
-	 <div class="header">
-  <a href="#default" class="logo">Mahden Saleh</a>
+
+<body id="top">
+
+<div class="header">
+  <p class="logo">M A H D E N   S A L E H</p>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="SALEH_CSAD_SKILLS.html">Skills</a>
-    <a href="aboutme.html">About</a>
-	<a href="gallery.html">Gallery</a>
+    <a class="active" href="#home"><img src="house.png">Home</a>
+	<a href="about.html"><img src="cresentpixel.png">About</a>
+    <a href="skills.html"><img src="fire.png">Skills</a>
+	<a href="resume.html"><img src="resume.png">Resume</a>
+	<a href="gallery.html"><img src="camera.gif">Gallery</a>
+	<a href="beats.html"><img src="music.png">My Beats</a>
+	<a href="movies.html"><img src="film.png">Movies</a>
+	
+</div></div>
 
-  </div></div>
+
+
   
+<div class="container">
 
-	<div class="center">
-	<h1>Welcome to my page</h1>
-	<a id="aboutme" href="aboutme.html">Start</a>
+	<div class="image">
+	<div class="unveil">
+<img src="me.webp">
+<img src="me1.webp" class="back">
+</div>
+	
+	
 	</div>
+	
+	<div class="center">
+		<div class="text">
+			<img src="question1.webp" class="question1">
+		</div>		
+		
+	</div>
+
+	<!-- <div class="text"> -->
+			<!-- <h1> Do you want to know more about me?</h1> -->
+				
+			<!-- <!-- <a href="about.html">Yes</a> --> -->
+		<!-- </div>	 -->
+</div>
+
+
+
+
+<img src="border.webp">
+
+
+<div class="topbutton">
+
+
+<div class="column">
+<div class="unveil">
+<img src="box.webp">
+<a href="skills.html"><img src="boxskill.webp" class="back"></a>
+
+<div class="row">
+<img src="box.webp">
+<!-- <a href="skills.html"><img src="boxskill.webp" class="back"></a> -->
+</div>
+</div>
+
+
+
+
+  
+  <!-- <div class="text"> -->
+			<!-- <h1> Do you want to know more about me?</h1> -->
+				
+			<!-- <!-- <a href="about.html">Yes</a> --> -->
+		<!-- </div>	 -->
   
   
+  <a href="#top" id="topbut"><img src="arrowup.png" id="imgtopbut"></a>
+  
+</div>
+</div>
 
 </body>
+
+
+
+
 </html>
-
-
-
-
-
-<!-- <style> -->
-<!-- a:link, a:visited a:hover a:active{ -->
-<!-- text-align: center;  -->
-<!-- padding-left:50px; -->
- <!-- display: block; -->
-<!-- } -->
-<!-- a:link { -->
-	  <!-- color: red; -->
-	<!-- } -->
-	
-	<!-- a:visited { -->
-	  <!-- color: green; -->
-	<!-- } -->
-
-	<!-- /* mouse over link */ -->
-	<!-- a:hover { -->
-	  <!-- color: hotpink; -->
-	<!-- font-size:40px; -->
-	<!-- } -->
-
-	<!-- a:active { -->
-	 <!-- color: blue; -->
-	<!-- }  -->
-<!-- img{ -->
-  <!-- display: block; -->
-  <!-- margin-left: auto; -->
-  <!-- margin-right: auto; -->
-  <!-- width: 20%; -->
-  <!-- border: 5px solid pink; -->
-  
-<!-- } -->
-<!-- div{ -->
-<!-- background-color:#d7ebfe; -->
-<!-- border: 15px solid pink; -->
-
-<!-- } -->
-<!-- audio{ -->
-  <!-- display: flex; -->
-  <!-- justify-content: center; -->
-  <!-- align-items: center; -->
-	<!-- } -->
-<!-- p{ -->
-	<!-- border-style: dashed; -->
-	<!-- border-color: white; -->
-<!-- } -->
-
-<!-- </style> -->
-
-<!-- </head> -->
-	<!-- <!--CSAD-SALEH-MAHDEN--> 
-<!-- <body> -->
-
-
-<!-- <div> -->
- <!-- <img src="gudetama.png" alt="Picture of me">  -->
-  
-<!-- <p><a href="saleh_biography_csad.html">About Me</a>  -->
-<!-- <a href="SALEH_CSAD_SKILLS.html">Skills</a>  -->
-	<!-- <a href="resume.html">Resume</a></p> -->
-<!-- </div> -->
-<!-- <audio controls autoplay> -->
-<!-- <source src="wii.mp3" type="audio/mp3"> -->
-<!-- Your browser does not support the audio element. -->
-<!-- </audio>  -->
-<!-- </body> -->
-<!-- </html> -->
