--- a/gallery.html
+++ b/gallery.html
@@ -2,67 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+	<link rel="stylesheet" href="gallery.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
     <title>Gallery</title>
-	<style>
- .row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-
-/* Create four equal columns that sits next to each other */
-.column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
 	
-	</style>
 </head>
+
 <body>
-
+<div class="header">
+  <p class="logo">M A H D E N   S A L E H</p>
+  <div class="header-right">
+    <a href="index.html"><img src="house.png">Home</a>
+	<a href="about.html"><img src="cresentpixel.png">About</a>
+    <a href="skills.html"><img src="fire.png">Skills</a>
+	<a href="resume.html"><img src="resume.png">Resume</a>
+	<a class="active" href="gallery.html"><img src="camera.gif">Gallery</a>
+	<a href="beats.html"><img src="music.png">My Beats</a>
+	<a href="movies.html"><img src="film.png">Movies</a>
+	<a href="places.html"><img src="film.png">Places</a>
+	<a href="bucketlist.html"><img src="bucketlist.png">Bucket List</a>
 	
-	
-	 <div class="row">
-  <div class="column">
+</div></div>
 
-    <a href="saleh_biography_csad.html#childhood"><img src="child.gif" alt="child" style="width:100%"></a>
-  </div>
 
-  <div class="column">
-    <a href="saleh_biography_csad.html#teenage"><img src="teenage.gif" alt="teen" style="width:100%"></a>
-  </div>
-  <div class="column">
-    <a href="saleh_biography_csad.html#college"><img src="college.gif" alt="college" style="width:100%"></a>
-  </div>
-</div> 
+<header>
+		<!-- <h1>Image gallery<em>CSS3</em></h1> -->
+	</header>
+	<div class="wrapper">
+		<div class="gallery">
+			<ul>
+				<li><a href="teenage3.jpg"><img src="teenage3.jpg"></a></li>
+				<li><a href="teenage2.jpg"><img src="teenage2.jpg"></a></li>
+				<li><a href="teenage1.jpg"><img src="teenage1.jpg"></a></li>
+				<li><a href="childhood3.jpg"><img src="childhood3.jpg"></a></li>
+				<li><a href="childhood2.jpg"><img src="childhood2.jpg"></a></li>
+				<li><a href="childhood1.jpg"><img src="childhood1.jpg"></a></li>
+				<li><a href="college3.png"><img src="college3.png"></a></li>
+				<li><a href="college2.png"><img src="college2.png"></a></li>
+				<li><a href="skill1.jpg"><img src="skill1.jpg"></a></li>
+				<li><a href="skill2.jpg"><img src="skill2.jpg"></a></li>
+				<li><a href="skill3.jpg"><img src="skill3.jpg"></a></li>
+			</ul>
+		</div>
+		
+	</div>
+<!-- partial -->
 
-<p>kindly select one of the three images to know more about me!</p>
-  
-<a id="homepage" href="index.html">Go back to homepage</a>  
+
+
+
+
+
+
 
 </body>
 </html>
-
