--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<a href="gallery.html"><img src="camera.gif">Gallery</a>
 	<a href="beats.html"><img src="music.png">My Beats</a>
 	<a href="movies.html"><img src="film.png">Movies</a>
+	<a href="places.html"><img src="film.png">Places</a>
+	<a href="bucketlist.html"><img src="bucketlist.png">Bucket List</a>
 	
 </div></div>
 
