--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
   <head>
-  <link rel="stylesheet" href="mystyle.css">
+  <link rel="stylesheet" href="resume.css">
     <!--CSAD-SALEH-MAHDEN-->
     <meta charset="utf-8">
     <title>Resume</title>
@@ -11,6 +11,23 @@
     </style>
   </head>
   <body>
+  
+  <div class="header">
+  <p class="logo">M A H D E N   S A L E H</p>
+  <div class="header-right">
+    <a href="index.html"><img src="house.png">Home</a>
+	<a href="about.html"><img src="cresentpixel.png">About</a>
+    <a href="skills.html"><img src="fire.png">Skills</a>
+	<a  class="active" href="resume.html"><img src="resume.png">Resume</a>
+	<a href="gallery.html"><img src="camera.gif">Gallery</a>
+	<a href="beats.html"><img src="music.png">My Beats</a>
+	<a href="movies.html"><img src="film.png">Movies</a>
+	<a href="places.html"><img src="film.png">Places</a>
+	<a href="bucketlist.html"><img src="bucketlist.png">Bucket List</a>
+	
+</div></div>
+
+<div class="content">
     <h1>Mahden Saleh</h1>
     <p id="about">A seasoned offensive penetration tester with over 7 years of experience. Provides high quality results and worked with multicompanies that can ensure the protection of systems.<p>
    <hr>
@@ -35,6 +52,8 @@
     <li>Cloud Services</li>
     <li>Artificial Learning</li>
     </ul>
+	
+	</div>
   	<a href="index.html" title="Homepage"> Back to homepage</a>
   </body>
  
