--- a/OrderForm/index.html
+++ b/OrderForm/index.html
@@ -83,7 +83,7 @@
   <input type="radio" id="wheatbun" name="bun" value="wheatbun">
   <label for="wheatbun">Wheat bun</label><br>
   <input type="radio" id="honeyoat" name="bun" value="honeyoat">
-  <label for="honeyoat">Honeyo Oat</label><br>
+  <label for="honeyoat">Honey Oat</label><br>
   <input type="radio" id="sugarfree" name="bun" value="sugarfree">
   <label for="sugarfree">Sugar Free</label><br>
 </tr>
